# ALF-bench

./: .cursorignore  .gitignore  README.md  example_usage.py  pyproject.toml  test_env.py
crawlers/: __init__.py  channel_crawler.py  channel_crawler_v1_old.py  channel_crawler_v2.py
data/domain/saas/channel/docs/: 채널톡_구독_이해하기.md  채널톡_설치하기.md  채널톡_시작하기.md  채널톡_활용하기.md
data/domain/saas/channel/docs/AI/: AI_부가기능.md
data/domain/saas/channel/docs/개인_설정/: 계정_설정.md  매니저_프로필_설정.md  푸시알림_설정.md
data/domain/saas/channel/docs/고객_메신저/: 대화_내용_검색.md  멀티_채널_응대.md  상담_구조.md  상담_프로필.md  수신함.md  입력폼.md  팔로업_알림.md
data/domain/saas/channel/docs/고객_연락처/: 고객_관리.md  고객_구분.md  고객_연락처.md  고객_태그.md  고객_프로필.md  유니피케이션.md  이벤트.md
data/domain/saas/channel/docs/구독_및_결제/: 결제_정보.md  구독_세부_설정.md  사용량_선불_충전.md  서비스_구독.md  외부_전송_내역.md  청구서_항목별_안내.md  플랜_변경.md  환불_정책.md
data/domain/saas/channel/docs/마케팅/: GTM_설정하기.md  마케팅_통계.md  마케팅이란.md  브랜드_메시지(친구톡).md  알림톡.md  이벤트_정보.md  일회성_메시지.md  정보성_메시지란.md  캠페인.md
data/domain/saas/channel/docs/미트/: 영상_미트.md  음성_미트.md  팀_미트.md
data/domain/saas/channel/docs/앱스토어/: 080_수신거부_앱.md  GitHub.md  쇼피파이_허브.md  앱스토어란.md  카페24_허브.md
data/domain/saas/channel/docs/오퍼레이션/: 상담_목표.md  상담_자동_배정.md  상담_태그.md  상담_통계_(상담별).md  상담_통계_(케이스별).md  상담_통계_다운로드_(상담별).md  상담_통계_다운로드_(케이스별).md  오퍼레이터.md  전화_모니터링.md
data/domain/saas/channel/docs/외부서비스_연동/: VOC_STUDIO.md  고객_링크.md  라인.md  문자.md  슬랙.md  잔디.md  트윌리오.md
data/domain/saas/channel/docs/워크플로우/: 워크플로우_FAQ.md  워크플로우_문제_해결_가이드.md  워크플로우_통계.md  (+1 more)
envs/: __init__.py  channel_env.py  judge.py  tools.py  user_simulator.py
(+52 files in other folders)
