[project]
name = "alf-bench"
version = "0.1.0"
description = "A realistic customer service agent benchmark focusing on RAG, multi-turn conversations, tool use, and multimodal interactions"
authors = [
    {name = "Seungyoun Shin", email = "robin@channel.io"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.0",
    "markdownify>=0.11.6",
    "lxml>=4.9.0",
    "urllib3>=2.0.0",
    "litellm>=1.0.0",
    "numpy>=1.24.0",
    "scikit-learn>=1.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["crawlers", "envs"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.black]
line-length = 100
target-version = ["py310"]

